@@ -19,15 +19,31 @@ Imports: VGAM, parallel
 Suggests: knitr, R.matlab
 VignetteBuilder: knitr
 License: GPL-2 | GPL-3
-Collate: 'aaa_all_classes.R' 'all_classes_ctn.R'
-      'all_classes_discrete.R' 'AllGenerics.R'
-      'bootstrap_p.R' 'bootstrap.R' 'ctn_helper_functions.R'
-      'data_help_files.R' 'discrete_helper_functions.R'
-      'dist_cdf-methods.R' 'dist_data_cdf-methods.R'
-      'dist_ll-methods.R' 'dist_pdf-methods.R'
-      'dist_rand-methods.R' 'estimate_pars.R'
-      'estimate_xmin.R' 'initialize-methods.R'
-      'lines-methods.R' 'mle-methods.R' 'plcon.R' 'pldis.R'
-      'plot-methods.R' 'points-methods.R'
-      'poweRlaw-package.R' 'checks.R'
-      'compare_distributions.R'
+Collate:
+    'aaa_all_classes.R'
+    'all_classes_ctn.R'
+    'all_classes_discrete.R'
+    'AllGenerics.R'
+    'bootstrap_p.R'
+    'bootstrap.R'
+    'ctn_helper_functions.R'
+    'data_help_files.R'
+    'discrete_helper_functions.R'
+    'dist_cdf-methods.R'
+    'dist_data_cdf-methods.R'
+    'dist_ll-methods.R'
+    'dist_pdf-methods.R'
+    'dist_rand-methods.R'
+    'estimate_pars.R'
+    'estimate_xmin.R'
+    'initialize-methods.R'
+    'lines-methods.R'
+    'mle-methods.R'
+    'plcon.R'
+    'pldis.R'
+    'plot-methods.R'
+    'points-methods.R'
+    'poweRlaw-package.R'
+    'checks.R'
+    'compare_distributions.R'
+    'ptappl.R'
