@@ -3,7 +3,7 @@ export(bootstrap_p)
 exportClasses(conexp)
 exportClasses(conlnorm)
 exportClasses(conpl)
-exportClasses(conpltap)
+exportClasses(contappl)
 exportClasses(disexp)
 exportClasses(dislnorm)
 exportClasses(displ)
@@ -12,7 +12,7 @@ export(compare_distributions)
 export(conexp)
 export(conlnorm)
 export(conpl)
-export(conpltap)
+export(contappl)
 export(disexp)
 export(dislnorm)
 export(displ)
