@@ -5,6 +5,16 @@ con_pl_ll = function(x, pars, xmin) {
 
 
 
+
+
+
+contappl_ll = function(x, pars, xmin) {
+  if(is.vector(pars)) pars = t(as.matrix(pars))
+  n = length(x)
+  colSums(apply(pars, 1, function(i) dtappl(x, xmin, i[1], i[2], log=TRUE)))
+}
+
+
 conlnorm_tail_ll = function(x, pars, xmin) {
   if(is.vector(pars)) pars = t(as.matrix(pars))
   n = length(x)
